--- a/style.css
+++ b/style.css
@@ -1,3 +1,165 @@
+/* Fonts */
+.wdxl-lubrifont-tc-regular {
+  font-family: "WDXL Lubrifont TC", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.rubik-glitch-regular {
+  font-family: "Rubik Glitch", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
+.taviraj-thin {
+  font-family: "Taviraj", serif;
+  font-weight: 100;
+  font-style: normal;
+}
+
+.taviraj-extralight {
+  font-family: "Taviraj", serif;
+  font-weight: 200;
+  font-style: normal;
+}
+
+.taviraj-light {
+  font-family: "Taviraj", serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.taviraj-regular {
+  font-family: "Taviraj", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.taviraj-medium {
+  font-family: "Taviraj", serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.taviraj-semibold {
+  font-family: "Taviraj", serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.taviraj-bold {
+  font-family: "Taviraj", serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.taviraj-extrabold {
+  font-family: "Taviraj", serif;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.taviraj-black {
+  font-family: "Taviraj", serif;
+  font-weight: 900;
+  font-style: normal;
+}
+
+.taviraj-thin-italic {
+  font-family: "Taviraj", serif;
+  font-weight: 100;
+  font-style: italic;
+}
+
+.taviraj-extralight-italic {
+  font-family: "Taviraj", serif;
+  font-weight: 200;
+  font-style: italic;
+}
+
+.taviraj-light-italic {
+  font-family: "Taviraj", serif;
+  font-weight: 300;
+  font-style: italic;
+}
+
+.taviraj-regular-italic {
+  font-family: "Taviraj", serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.taviraj-medium-italic {
+  font-family: "Taviraj", serif;
+  font-weight: 500;
+  font-style: italic;
+}
+
+.taviraj-semibold-italic {
+  font-family: "Taviraj", serif;
+  font-weight: 600;
+  font-style: italic;
+}
+
+.taviraj-bold-italic {
+  font-family: "Taviraj", serif;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.taviraj-extrabold-italic {
+  font-family: "Taviraj", serif;
+  font-weight: 800;
+  font-style: italic;
+}
+
+.taviraj-black-italic {
+  font-family: "Taviraj", serif;
+  font-weight: 900;
+  font-style: italic;
+}
+
+h3 {
+  font-family: "WDXL Lubrifont TC", sans-serif;
+}
+
+h1 {
+  font-family: "Rubik Glitch", system-ui;
+  -webkit-text-fill-color: #f8f5ef;
+  -webkit-text-stroke-width: 0.5px;
+  -webkit-text-stroke-color: #fd99fc;
+}
+
+.tema {
+  padding: 10px;
+
+  text-align: center;
+
+  -webkit-text-fill-color: #f8f5ef;
+  -webkit-text-stroke-width: 0.5px;
+  -webkit-text-stroke-color: #fd99fc;
+}
+
+@media screen and (min-width: 800px) {
+  .portfoliocol {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    text-align: center;
+  }
+  /***Bevæg billede ved hover***/
+  .portfolio1,
+  .portfolio2,
+  .portfolio3,
+  .portfolio4 {
+    position: relative;
+    overflow: hidden;
+  }
+
+  .portfolio1 :hover {
+    font-size: xx-large;
+  }
+}
+
 nav {
   display: flex;
   align-items: center;
@@ -21,14 +183,17 @@ nav {
 .menu a {
   display: block;
   padding: 10px;
-  color: #333333;
+  color: #f8f5ef;
   text-decoration: none;
   transition: color 0.3s;
   text-align: end;
+  font-family: "WDXL Lubrifont TC", sans-serif;
 }
 
 .menu a:hover {
-  color: #ff0000;
+  color: #40c2f8;
+  text-decoration: underline;
+  font-family: "WDXL Lubrifont TC", sans-serif;
 }
 .burger {
   width: 30px;
@@ -102,24 +267,15 @@ p {
   color: #f8f5ef;
 }
 
-.tema {
-  text-decoration: none;
-  padding: 10px;
-
-  text-align: center;
-
-  -webkit-text-fill-color: #f8f5ef;
-  -webkit-text-stroke-width: 0.5px;
-  -webkit-text-stroke-color: #fd99fc;
-}
-
 .footerhead {
   text-align: center;
   -webkit-text-fill-color: #f8f5ef;
 }
+
 .footerp {
   text-align: center;
   -webkit-text-fill-color: #f8f5ef;
+  margin-top: -20px;
 }
 
 .footergrid {
@@ -141,55 +297,6 @@ p {
   padding: 90px;
   margin-top: 50px;
 }
-/* Allerede eksisterende boble-stil */
-#bobbel_sprite1 {
-  width: 50px;
-  height: 50px;
-  background-color: #87ceeb;
-  background: linear-gradient(#87ceeb, #f378f7);
-  opacity: 75%;
-  border-radius: 50%;
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  animation: floatUp 7s linear infinite;
-  cursor: pointer;
-  transition: opacity 0.5s ease, transform 0.5s ease;
-}
-#bobbel_sprite2 {
-  width: 50px;
-  height: 50px;
-  background-color: #87ceeb;
-  background: linear-gradient(#87ceeb, #f378f7);
-  opacity: 75%;
-  border-radius: 50%;
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  animation: floatUp 7s linear infinite;
-  cursor: pointer;
-  transition: opacity 0.5s ease, transform 0.5s ease;
-  translate: 150px;
-}
-#bobbel_sprite3 {
-  width: 50px;
-  height: 50px;
-  background-color: #87ceeb;
-  background: linear-gradient(#87ceeb, #f378f7);
-  opacity: 75%;
-  border-radius: 50%;
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  animation: floatUp 7s linear infinite;
-  cursor: pointer;
-  transition: opacity 0.5s ease, transform 0.5s ease;
-  translate: 100px;
-}
-
 @keyframes floatUp {
   from {
     transform: translateX(-50%) translateY(0);
@@ -199,8 +306,29 @@ p {
   }
 }
 
-/* Når boblen "forsvinder" */
 .bobbel-forsvind {
   opacity: 0;
-  transform: translateX(-50%) scale(0.2);
+  transform: translateX(-50%) scale(0.1);
+}
+
+.bobbel {
+  z-index: 10; /* så de ikke gemmes bag noget */
+}
+
+a {
+  text-decoration: none;
+}
+h2 {
+  margin-top: 60px;
+  text-align: center;
+  -webkit-text-fill-color: #f8f5ef;
+  -webkit-text-stroke-width: 0.5px;
+  -webkit-text-stroke-color: #fd99fc;
+}
+
+.underline-on-hover:hover {
+  text-decoration-color: #f378f7;
+  font-family: "Taviraj", serif;
+  border-style: outset;
+  border-radius: 10px;
 }
