--- a/style.css
+++ b/style.css
@@ -1,4 +1,21 @@
+* {
+  box-sizing: border-box;
+}
+body {
+  margin: 0;
+}
+img {
+  height: auto;
+  display: block;
+  width: 80%;
+  align-items: center;
+}
+
 /* Fonts */
+
+p {
+  font-family: "Taviraj", serif;
+}
 .wdxl-lubrifont-tc-regular {
   font-family: "WDXL Lubrifont TC", sans-serif;
   font-weight: 400;
@@ -116,10 +133,6 @@
   font-family: "Taviraj", serif;
   font-weight: 900;
   font-style: italic;
-}
-
-h3 {
-  font-family: "WDXL Lubrifont TC", sans-serif;
 }
 
 h1 {
@@ -269,6 +282,9 @@ body {
   background-color: #0f1013;
 }
 
+h3 {
+}
+
 p {
   color: #f8f5ef;
 }
@@ -321,7 +337,6 @@ p {
 .bobbel {
   z-index: 10; /* så de ikke gemmes bag noget */
 }
-
 a {
   text-decoration: none;
 }
